# rpi-vision-demo

./: .gitignore  README.md
dashboard/: index.html  style.css
vision/: CMakeLists.txt  CMakeSettings.json
vision/src/: main.cpp  pipeline.cpp  pipeline.hpp  pipeline_controller.cpp  pipeline_controller.hpp
vision/src/grpc-common/: pipeline_controller.grpc.pb.cc  pipeline_controller.grpc.pb.h  pipeline_controller.pb.cc  pipeline_controller.pb.go  pipeline_controller.pb.h
webserver/: go.mod
webserver/cmd/server/: main.go
webserver/grpc-common/: pipeline_controller.proto
webserver/internal/api/: ihttp.go  routes.go  server.go  thresholds.go
webserver/internal/fileserver/: server.go
